	  Defined a mouse interface that is very similar to a touchscreen
	  interface, but allows reporting of all mouse buttons.  Also, unlike
	  touchscreen drivers, mouse drivers need to report positional data
	  with no button is pressed so that the mouse position can drive a
	  cursor (2014-2-10).
	* drivers/usbhost/usbhost_hidmouse.c, include/nuttx/input/mouse.h, and
	  include/nuttx/usb/hid.h:  Add support for a mouse wheel (2014-2-10).
	* drivers/lcd/mio283qt9a.c and include/nuttx/lcd/mio283qt9a.h:  Support
	  for the MIO283QT9A LCD.  From Toby Duckworth (2014-2-10).
	* configs/mikroe-stm32f4/src/up_mio283qt9a.c: The Mikroe STM32F4 can
	  now support the newer MIO283QT9A LCD. From Toby Duckworth (2014-2-10).
	* MANY files changes based on complaints from the tool CppCheck.  Several
	  latent bugs were fixed (and most likely some new typos were introduced)
	  (2014-2-10).
	* arch/arm/include/samd and src/samd:  Basic framework to support Atmel
	  SAMD20 Cortex-M0+ chips.  Initial check-in is incomplete; this is a
	  work in progress (2014-2-12).
	* configs/samd20-xplained:  Framework to support the Amtel SAMD20
	  Xplained Pro.  Initial check is just an unverified, rough port of
	  the SAM4L Xplained Pro configuration (2014-2-12).
	* arch/arm/src/stm32/stm32_serial.c:  Fix cloned type:  FLOWCONTROL
	  vs FLOWCONROL (2014-2-14).
	* net/uip/uip_tcptimer.c: Back out a small part of the 6.33 write
	  buffering changed.  David G says that this causes problems in
	  connecting to a server (2014-2-15).
	* The basic SAMD20 Xplained Pro port is complete but still untested
	  (2014-2-16).
	* sched/task_terminate.c:  Always returns an error because the
	  return value was not being set correctly.  From Gosha (2014-2-18).
	* stm32f429i-disco/ostest-fpu:  OS test for FPU-enabled system from
	  David Alessio (2014-2-18).
	* Other misc changes to support FPU on STM32F429 Discovery from
	  David Alession (2014-2-18)